objects/SPC_Component__c/SPC_Component__c.object-meta.xml
<CustomObject>
    <label>SPC Component</label>
    <nameField>
        <label>SPC Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPC Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>