objects/SPC_Component__c/fields/Access_Technology_Name__c.field-meta.xml
<CustomField>
    <fullName>Access_Technology_Name__c</fullName>
    <label>Access Technology Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>