objects/SPC_Component__c/fields/Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>Bandwidth__c</fullName>
    <label>Bandwidth</label>
    <summarizedField>SPC_Pricing__c.Bandwidth__c</summarizedField>
    <summaryForeignKey>SPC_Pricing__c.SPC_Component__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>