objects/SPC_Component__c/fields/Bandwidth_Text__c.field-meta.xml
<CustomField>
    <fullName>Bandwidth_Text__c</fullName>
    <label>Bandwidth Text</label>
    <length>40</length>
    <type>Text</type>
</CustomField>