objects/SPC_Component__c/fields/Feature_Schedule_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Feature_Schedule_Prompt__c</fullName>
    <label>Feature Schedule Prompt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>