objects/SPC_Component__c/fields/Is_LD_Interstate__c.field-meta.xml
<CustomField>
    <fullName>Is_LD_Interstate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is LD Interstate</label>
    <type>Checkbox</type>
</CustomField>