objects/SPC_Component__c/fields/Is_Voice_Line__c.field-meta.xml
<CustomField>
    <fullName>Is_Voice_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Voice Line</label>
    <type>Checkbox</type>
</CustomField>