objects/SPC_Component__c/fields/Is_Voice_Line_Option__c.field-meta.xml
<CustomField>
    <fullName>Is_Voice_Line_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Voice Line Option</label>
    <type>Checkbox</type>
</CustomField>