objects/SPC_Component__c/fields/Sales_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Sales_Product_Group__c</fullName>
    <label>Sales Product Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>